--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
 body {
-    background-color: yellowgreen ;
+    background-color: white ;
+   
+
+}
+
+section {
+  
+  border-color: grey;
+  border-width: 3px;
+  
 }
 
 header {
-      background-color: yellowgreen ;
+      background-color: white ;
       color: #1a1a1a;
       padding: 15px;
       font-family: Arial, Helvetica, sans-serif;
@@ -11,8 +20,36 @@ header {
   }
  
  nav form {
-  float: right;
+  float: left;
  }
+
+ .submit {
+      background-color: #cdeac0;
+      margin-top: 10px;
+      border-radius: 5px;
+ }
+
+  .color-settings {
+      background-color: #aad576;
+      border-width: 1px;
+      border-color: gray;
+      border-style: dotted;
+      padding: 5px;
+}
+
+.color-choser {
+  background-color: white;
+  padding: 5px;
+  /*  okraj zelenej farby po ľavom boku výberu farby */
+  border-left: 4px;
+  border-color: #538d22;
+  border-left-style: solid;
+  /* okraj zelenej farby po pravom boku výberu farby */
+  border-right: 4px;
+  border-color: #538d22;
+  border-right-style: solid;
+
+}
 
  nav input label {
    padding-bottom: 10px;
@@ -64,6 +101,14 @@ nav li a {
     color: #222;
     padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
+    border-left: 4px;
+    border-color: #538d22;
+    border-left-style: solid;
+
+    /* okraj zelenej farby po pravom boku sekcie článkov */
+    border-right: 4px;
+    border-color: #538d22;
+    border-right-style: solid;
     
 }
 
@@ -85,13 +130,30 @@ article h1 {
 footer .column {
     float: left;
     width: 33.33%;
+    box-sizing: border-box; /* for fitting columns into one row !!! */
+    
   }
   
   /* Clear floats after the columns */
   footer .row:after {
+    
     content: "";
     display: table;
     clear: both;
+    background-color: grey;
+    
+  }
+
+  footer .column{
+    padding : 5px;
+    
+    background-color: white;
+    border-right:4px;
+    border-color: grey;
+    border-right-style: solid;
+    
+    
+    
   }
 
   section .column {
